--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,18 @@
 body {
-   background-color: #D0B8C5; 
+   /* background-color: #D0B8C5;  */
    font-family: varela round;
    color: #6A4057;
+   background-image:linear-gradient(55deg, #D0B8C5 10%,  #F1D1D5 90% );
+   height: 100%;
+   /* background-image: url("gradient.svg"); */
+   background-repeat: no-repeat;
+
+   /* very important! background image is fixed to the viewport. Without background-attachment:fixed gradient is repeated, and looks bad*/
+   background-attachment: fixed;
+   margin: 5%;
 }
+
+
 
 .btn-color {
    box-shadow: 0px 10px 14px -7px #d4a1ab;
@@ -27,7 +37,7 @@ body {
 .glass-card {
    border: 1px solid;
 
-   border-radius: 40%;
+   /* border-radius: 10%; */
 
    border-image-source: linear-gradient(90deg, rgba(255, 255, 255, 0.8) 9.37%,
     rgba(232, 184, 192, 0.4) 41.28%, rgba(211, 116, 132, 0.4) 58.72%, rgba(169, 93, 106, 0.3) 91.05%);
@@ -42,7 +52,7 @@ body {
 
    box-shadow: 0 8px 32px 0 rgba(169, 93, 106, 0.3);
    
-   margin: 10% auto 10% auto;
+   margin: 10% 3% 10% 3%;
 
 
 }
@@ -51,4 +61,10 @@ body {
 .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
     max-width: 300px;
 } */
+
+footer {
+  
+   text-align: center;
+   color: #e6e6e6;
+}
 
