--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,70 +1,79 @@
 body {
-   /* background-color: #D0B8C5;  */
+   background-image: url(background-waves.png);
+   background-size: cover;
+   background-position: center center;
+   background-attachment: fixed;
    font-family: varela round;
    color: #6A4057;
-   background-image:linear-gradient(55deg, #D0B8C5 10%,  #F1D1D5 90% );
-   height: 100%;
-   /* background-image: url("gradient.svg"); */
-   background-repeat: no-repeat;
-
-   /* very important! background image is fixed to the viewport. Without background-attachment:fixed gradient is repeated, and looks bad*/
-   background-attachment: fixed;
-   margin: 5%;
-}
-
-
-
-.btn-color {
-   box-shadow: 0px 10px 14px -7px #d4a1ab;
-	background:linear-gradient(to bottom, #d77c8d 5%, #d18695 100%);
-	background-color:#d77c8d;
-	/* border-radius:8px;
-	display:inline-block;
-	cursor:pointer; */
-	color:#e6e6e6;
-	margin: 0 auto 0;
-	font-size: 1rem;
-	padding:0.5rem 1rem;
-	text-decoration:none;
-	
-}
-.btn-color:hover {
-   background:linear-gradient(to bottom, #b76b79 5%, #a9606e 100%);
-	background-color:#d18695;
-   color:#fffdfd;
+  
 }
 
 .glass-card {
-   border: 1px solid;
+  border: 1px solid;
 
-   /* border-radius: 10%; */
+  border-image-source: linear-gradient(90deg, rgba(255, 255, 255, 0.8) 9.37%,
+   rgba(232, 184, 192, 0.4) 41.28%, rgba(211, 116, 132, 0.4) 58.72%, rgba(169, 93, 106, 0.3) 91.05%);
 
-   border-image-source: linear-gradient(90deg, rgba(255, 255, 255, 0.8) 9.37%,
-    rgba(232, 184, 192, 0.4) 41.28%, rgba(211, 116, 132, 0.4) 58.72%, rgba(169, 93, 106, 0.3) 91.05%);
+  background: linear-gradient(135deg, rgba(255,255,255,0.2) 0%, rgba(232,184,192,0.07) 65%,
+   rgba(217,137,150,0.07) 80%, rgba(169,93,106,0.05) 100%);
 
-   background: linear-gradient(135deg, rgba(255,255,255,0.2) 0%, rgba(232,184,192,0.07) 65%,
-    rgba(217,137,150,0.07) 80%, rgba(169,93,106,0.05) 100%);
+  backdrop-filter: blur(10px);
+  
+  /* webkit prefix to work on Safari */
+  -webkit-backdrop-filter: blur(15px);
 
-   backdrop-filter: blur(10px);
-   
-   /* webkit prefix to work on Safari */
-   -webkit-backdrop-filter: blur(10px);
-
-   box-shadow: 0 8px 32px 0 rgba(169, 93, 106, 0.3);
-   
-   margin: 10% 3% 10% 3%;
-
+  box-shadow: 0 8px 32px 0 rgba(169, 93, 106, 0.3);
+  
+  margin: 10% 3% 10% 3%;
 
 }
 
-/* @media (min-width: 500px)
-.container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-    max-width: 300px;
-} */
+.btn-color {
+   box-shadow: 0px 10px 14px -7px #d4a1ab;
+    background:linear-gradient(to bottom, #d77c8d 5%, #d18695 100%);
+    background-color:#d77c8d;
+    color:#e6e6e6;
+    margin: 0 auto 0;
+    font-size: 1rem;
+    padding:0.5rem 1rem;
+    text-decoration:none;
+    
+}
+.btn-color:hover {
+   background:linear-gradient(to bottom, #b76b79 5%, #a9606e 100%);
+    background-color:#d18695;
+   color:#fffdfd;
+}
+
+h2 {
+   font-size: 3rem;
+}
+
+p {
+   font-size: 1.5rem;
+}
+
+/*Slider*/
+.form-range::-webkit-slider-thumb {
+   background-color:#d77c8d;
+}
+
+
+ 
+.mug {
+   margin: 20%;
+   width: 80px;
+   height: 80px;
+}
+
+.spoon {
+   margin: 20%;
+   width: 80px;
+  
+}
 
 footer {
-  
    text-align: center;
-   color: #e6e6e6;
+   color: #927676;
+   border-style: hidden;
 }
-
