--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,6 +28,16 @@ body {
 
 }
 
+.btn-size {
+   box-shadow: 0px 10px 14px -7px #d0b7bc;
+   margin: 0 auto 0;
+   font-size: 1rem;
+   padding:0.5rem 1rem;
+   text-decoration:none;
+}
+
+
+
 .btn-color {
    box-shadow: 0px 10px 14px -7px #d4a1ab;
     background:linear-gradient(to bottom, #d77c8d 5%, #d18695 100%);
@@ -75,5 +85,10 @@ p {
 footer {
    text-align: center;
    color: #927676;
-   border-style: hidden;
 }
+
+/* .recipe-title {
+   padding-left: 0px;
+} */
+
+
