--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,5 @@
+/* TAG SELECTORS */
+
 body {
    background-image: url(background-waves.png);
    background-size: cover;
@@ -5,8 +7,18 @@ body {
    background-attachment: fixed;
    font-family: varela round;
    color: #6A4057;
-  
+   
 }
+
+h2 {
+   font-size: 3rem;
+}
+
+p {
+   font-size: 1.5rem;
+}
+
+/* CLASS SELECTORS */
 
 .glass-card {
   border: 1px solid;
@@ -28,6 +40,7 @@ body {
 
 }
 
+/* Button in index.html */
 .btn-size {
    box-shadow: 0px 10px 14px -7px #d0b7bc;
    margin: 0 auto 0;
@@ -36,32 +49,23 @@ body {
    text-decoration:none;
 }
 
-
-
 .btn-color {
    box-shadow: 0px 10px 14px -7px #d4a1ab;
-    background:linear-gradient(to bottom, #d77c8d 5%, #d18695 100%);
-    background-color:#d77c8d;
-    color:#e6e6e6;
-    margin: 0 auto 0;
-    font-size: 1rem;
-    padding:0.5rem 1rem;
-    text-decoration:none;
-    
+   background:linear-gradient(to bottom, #d77c8d 5%, #d18695 100%);
+   background-color:#d77c8d;
+   color:#e6e6e6;
+   margin: 0 auto 0;
+   font-size: 1rem;
+   padding:0.5rem 1rem;
+   text-decoration:none;
+   
 }
 .btn-color:hover {
    background:linear-gradient(to bottom, #b76b79 5%, #a9606e 100%);
-    background-color:#d18695;
+   background-color:#d18695;
    color:#fffdfd;
 }
 
-h2 {
-   font-size: 3rem;
-}
-
-p {
-   font-size: 1.5rem;
-}
 
 /*Slider*/
 .form-range::-webkit-slider-thumb {
@@ -69,7 +73,24 @@ p {
 }
 
 
- 
+/* Text under sliders */
+.cocoa-text {
+   font-size: 0.75rem;
+   font-weight: bolder;
+   text-align: center;
+   color: #b76b79;
+
+}
+
+.sweet-text {
+   font-size: 0.75rem;
+   font-weight: bolder;
+   text-align: center;
+   color: #b76b79;
+}
+
+
+ /* Slider img */
 .mug {
    margin: 20%;
    width: 80px;
@@ -82,13 +103,20 @@ p {
   
 }
 
+.mug-gif {
+   width: 80px;
+   display: block;
+   margin: 0 auto 0 auto;
+}
+
+
+
+/* Footer */
+
 footer {
    text-align: center;
    color: #927676;
 }
 
-/* .recipe-title {
-   padding-left: 0px;
-} */
 
 
